--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -16,7 +16,8 @@ jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://10.2.0.189:3306/growtogether?useUnicode=true&characterEncoding=utf-8
 jdbc.url=jdbc:mysql://localhost:3306/growtogether?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=root
+#jdbc.password=root
+jdbc.password=123456
 
 #mssql database settings
 #jdbc.type=mssql
