--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -14,7 +14,7 @@ jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://114.115.209.238:3306/growtogether?useUnicode=true&characterEncoding=utf-8
 #jdbc.url=jdbc:mysql://10.2.0.189:3306/growtogether?useUnicode=true&characterEncoding=utf-8
-jdbc.url=jdbc:mysql://114.115.209.238:3306/growtogether?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://114.115.209.238:3306/quote?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
 #jdbc.password=root
 jdbc.password=newpass
@@ -44,7 +44,7 @@ redis.port=6379
 #============================#
 
 #\u4EA7\u54C1\u4FE1\u606F\u8BBE\u7F6E
-productName=SignalManage\u7BA1\u7406\u7CFB\u7EDF
+productName=\u751F\u4EA7\u62A5\u4EF7\u7BA1\u7406\u7CFB\u7EDF
 copyrightYear=\u79D1\u6280\u6709\u9650\u516C\u53F8
 version=\u79D1\u6280\u6709\u9650\u516C\u53F8
 
