--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
-	<groupId>com.cabinetms</groupId>
-	<artifactId>cabinetms</artifactId>
+	<groupId>com.quoteMS</groupId>
+	<artifactId>quoteMS</artifactId>
 	<version>0.0.1</version>
 	<packaging>war</packaging>
-	
-	<name>CabinetMS</name>
-	<url>https://github.com/fudiandong/CabinetMS</url>
-	<inceptionYear>2016</inceptionYear>
+
 	
 	<!-- 项目属性 -->
 	<properties>
