系统初始化完成

--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -12,8 +12,8 @@
 #mysql database setting
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://114.115.209.238:3306/growtogether?useUnicode=true&characterEncoding=utf-8
-#jdbc.url=jdbc:mysql://10.2.0.189:3306/growtogether?useUnicode=true&characterEncoding=utf-8
+#jdbc.url=jdbc:mysql://114.115.209.238:3306/aquote?useUnicode=true&characterEncoding=utf-8
+#jdbc.url=jdbc:mysql://10.2.0.189:3306/aquote?useUnicode=true&characterEncoding=utf-8
 jdbc.url=jdbc:mysql://114.115.209.238:3306/quote?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
 #jdbc.password=root
